# felix

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md
.claude/: settings.json
.github/workflows/: autofix.yml  ci.yml
legacy/: CMakeLists.txt  watch.sh
legacy/Src/: StatsAccumulation.hpp  ThreadStats.hpp  WindowStack.cpp  WindowStack.hpp  what-the-FEX.cpp
src/: datasource.rs  main.rs
src/fex/: mod.rs  platform.rs  shm.rs  smaps.rs  types.rs
src/recording/: format.rs  mod.rs  reader.rs  writer.rs
src/sampler/: accumulator.rs  mem_stats.rs  mod.rs  thread_stats.rs
src/tui/: app.rs  input.rs  layout.rs  mod.rs  replay_controls.rs  theme.rs
src/tui/panels/: header.rs  histogram.rs  jit_stats.rs  mem_stats.rs  mod.rs
