[package]
name = "felix"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "felix: Real-time profiler and recorder for FEX-Emu"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
libc = "0.2"
nix = { version = "0.29", features = ["mman", "fs"] }
num-format = "0.4"
postcard = { version = "1", features = ["use-std"] }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
signal-hook = "0.3"
zerocopy = { version = "0.8", features = ["derive"] }
zstd = "0.13"

[profile.release]
lto = true
strip = true
